# psgc

./: .gitignore  LICENSE  README.md  pyproject.toml  render.yaml
.github/workflows/: ci.yaml  publish.yaml
demo/: app.py  index.html
parsers/: build_data.py  compute_adjacency.py  compute_centroids.py  match_zip_codes.py  parse_psgc.py  parse_shapefiles.py
psgc/: __init__.py  _lazy.py  _loader.py  cache.py  config.py  results.py
psgc/address/: __init__.py  formatter.py  normalizer.py  parser.py  validator.py
psgc/cli/: __init__.py  main.py
psgc/data/core/: cities.json  provinces.json  regions.json  zip_codes.json
psgc/export/: __init__.py  formats.py  geojson.py
psgc/geo/: __init__.py  distance.py  neighbors.py  pip.py  reverse.py  spatial.py
psgc/models/: __init__.py  barangay.py  base.py  city.py  extended.py  flat.py  province.py  region.py
psgc/search/: __init__.py  autocomplete.py  fuzzy.py  index.py
tests/: conftest.py  test_address.py  test_cli.py  test_coverage_gaps.py  test_edge_cases.py  test_export.py  test_geo.py  test_models.py  test_publish_ready.py  test_qa.py  test_search.py
