[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "psgc"
version = "2026.1.13.0"
description = "Philippine Standard Geographic Code (PSGC) with coordinates, spatial queries, and fuzzy search. Community-maintained, not affiliated with PSA."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "psgc contributors" }]
keywords = ["philippines", "psgc", "barangay", "geography", "geocoding", "geospatial"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Typing :: Typed",
]
dependencies = [
    "rapidfuzz>=3.0",
]

[project.optional-dependencies]
cli = ["click>=8.0"]
yaml = ["pyyaml>=6.0"]
geo = ["scipy>=1.10"]
dev = [
    "psgc[cli,yaml,geo]",
    "geopandas>=0.14",
    "shapely>=2.0",
    "fiona>=1.9",
    "openpyxl>=3.1",
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
all = ["psgc[cli,yaml,geo]"]

[project.scripts]
psgc = "psgc.cli.main:cli"

[project.urls]
Homepage = "https://github.com/fish-and-bear/psgc"
Demo = "https://psgc-explorer-production.up.railway.app/"
Repository = "https://github.com/fish-and-bear/psgc"
"Bug Tracker" = "https://github.com/fish-and-bear/psgc/issues"

[tool.hatch.build.targets.wheel]
packages = ["psgc"]

[tool.hatch.build.targets.sdist]
exclude = ["parsers/", "tests/", "notebooks/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
